exercises/config-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-app
spec:
  containers:
  - image: busybox
    name: config-app
    command: ['sh', '-c', 'sleep 3600']
