exercises/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: web
    env: dev
  name: web
  namespace: dev
spec:
  containers:
  - image: nginx:1.17
    name: web
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
