exercises/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pvc-pod
  name: pvc-pod
spec:
  volumes:
  - name: task-pvc-volume
    persistentVolumeClaim:
      claimName: task-pvc
  containers:
  - image: busybox
    name: pvc-pod
    volumeMounts:
    - name: task-pvc-volume
      mountPath: /data
    command: ['sh', '-c', 'sleep 3600']
  restartPolicy: Always
status: {}
