exercises/secret-reader.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-reader
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: app-secret
  containers:
  - image: busybox
    name: secret-reader
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secret-data
